Refactor index.html for title and cleanup
Updated the title and removed unused meta and style elements.

--- a/index.html
+++ b/index.html
@@ -1,22 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <title>CricStars Live</title>
   <meta http-equiv="refresh" content="0; url=live.html">
-  <style>
-    body {
-      background:#0b0b0b;
-      color:#fff;
-      display:flex;
-      align-items:center;
-      justify-content:center;
-      height:100vh;
-      font-family:Arial;
-    }
-  </style>
+  <title>CricStars</title>
 </head>
 <body>
-  Redirecting to Live Match...
+Redirecting to Live Match...
 </body>
 </html>
