--- a/index.html
+++ b/index.html
@@ -8,55 +8,47 @@
 <style>
 body{
   margin:0;
-  font-family: Arial;
-  background: linear-gradient(#06162b,#020b17);
+  font-family:Arial;
+  background:linear-gradient(#050b1c,#020617);
   color:white;
   text-align:center;
 }
-.box{
-  background:#0b1f3a;
+.card{
+  background:#0b1228;
   margin:15px;
   padding:20px;
-  border-radius:15px;
+  border-radius:14px;
 }
-h1{margin-top:30px}
+h1{margin-top:30px;}
 </style>
 </head>
 
 <body>
 
 <h1>🏏 CricStars Live</h1>
+
 <h2 id="score">0/0</h2>
 <h3>Overs: <span id="overs">0.0</span></h3>
 
-<div class="box">
+<div class="card">
   <b>Last Wicket</b>
   <p id="lastWicket">-</p>
 </div>
 
-<div class="box">
+<div class="card">
   <b>Fall of Wickets</b>
   <pre id="fow">-</pre>
 </div>
 
 <script src="firebase.js"></script>
 <script>
-firebase.database().ref("match").on("value", snap=>{
-  if(!snap.exists()) return;
-  let d = snap.val();
-  let s = d.summary;
-
-  document.getElementById("score").innerText =
-    s.runs + "/" + s.wickets;
-
-  document.getElementById("overs").innerText =
-    s.overs + "." + s.balls;
-
-  document.getElementById("lastWicket").innerText =
-    d.lastWicket || "-";
-
-  document.getElementById("fow").innerText =
-    d.fallOfWickets || "-";
+firebase.database().ref("match").on("value", s=>{
+  if(!s.exists()) return;
+  let d = s.val();
+  document.getElementById("score").innerText = d.runs+"/"+d.wickets;
+  document.getElementById("overs").innerText = d.overs;
+  document.getElementById("lastWicket").innerText = d.lastWicket || "-";
+  document.getElementById("fow").innerText = d.fow || "-";
 });
 </script>
 
